# uninformed

./: .gitmodules  CHANGELOG.md  CHANGELOG.md.save0  CHANGELOG.md.save1  Lexer.hs  Preform Notes.md  README.md  cabal.project  flake.nix  hie.yaml  pipeline_overview.md  stack.yaml  uninformed-test.eventlog.json  uninformed.cabal
.VSCodeCounter/2022-07-31_13-35-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/: Main.hs
solitude/: .travis.yml  CHANGELOG.md  README.md  cabal.project  solitude.cabal
solitude/src/: Solitude.hs
src/: Uninformed.hs
src/Uninformed/: Lexer  Lexer.hs  NewVerb.hs  ParseTree  Pipeline.hs  Prelude.hs  Recursion.hs  Sentence.hs  Sentencifier.hs  SourceFile.hs  Supervisor.hs  Vocab  Vocabulary.hs  Word.hs
src/Uninformed/Assertions/: BootVerbs.hs
src/Uninformed/BinaryPredicates/: Types.hs
src/Uninformed/Extensions/: Parser.hs  Types.hs
src/Uninformed/Headings/: Parser.hs  Types.hs
src/Uninformed/Kinds/: Constructors.hs
src/Uninformed/Lexer/: Combinators.hs  Error.hs  Lexer.hs  Run.hs
src/Uninformed/Linguistics/: Stock.hs  Verbs.hs
src/Uninformed/NewVerb/: Parser.hs  Types.hs
src/Uninformed/Parser/: Combinators.hs  Common.hs  Driver.hs  Errors.hs  Expressions.hs  Extensions.hs  Headings.hs  NewVerb.hs  Parser.hs  Types.hs
src/Uninformed/Sentences/: Arrange.hs  Break.hs  Breaker.hs
src/Uninformed/Syntax/: Sentences.hs  SyntaxTree.hs
src/Uninformed/Syntax/Sentences/: Arrange.hs  Break.hs
src/Uninformed/VerbPhrases/: Parser.hs  Types.hs
src/Uninformed/Words/: Grammar.hs  Lexer.hs  TextFromFiles.hs  Vocabulary.hs
src/Uninformed/Words/Lexer/: Types.hs
test/: Main.hs  Spec.hs  standard_rules.txt
test/Bulk/Cases/: Chapter14.txt  Chapter17.txt  PM_PastCallings.txt  RuleInsteadMoves.txt
test/Bulk/Lexer/: APRegionAdaptation-expanded.txt  APRegionAdaptation.json  Abacus-C.json  Abacus-G.json  Acidity-C.json  ActionClauses-expanded.txt  ActionClauses.json  ActionInterrupted.json  ActionListTricky.json  ActionVariableMatching.json  ActionVariableMatching2.json  ActionVariableMatching2.txt  ActionVarsInPremiss.json  ActionWith.json  ActionsCommandTopic.json  ActivityListSpecificity.json  ActivityOnRegion-expanded.txt  ActivityOnRegion.json  ActivityOnRegion.txt  ActorExplicitlyPlayer.json  ActorExplicitlyPlayer.txt  ActorInPatterns.json  ActorSelf.json  AliasedParaBreak.json  AlmostAll.json  AmbiguousValue.json  AmbiguouslyPolymorphic.json  AnonymousAbiding.json  AnyScopeError.json  AnyScoping.json  AnyThings-expanded.txt  AnyThings.json  AssemblesQualifiedNoun.json  AssemblyPrintedNames.json  AssertAdjectives.json  Astronauts-expanded.txt  Astronauts.json  Asym1to1.json  AvoidingSpuriousParagraphBreaks.json  AvoidingSpuriousParagraphBreaks.txt  (+1666 more)
test/Bulk/Problems/: PM_UnendingComment.json  PM_UnendingI6.json  PM_UnendingQuote.json
test/Bulk/Sentences/: APRegionAdaptation.txt  Acidity-C.txt  ActionListTricky.txt  ActionVarsInPremiss.txt  ActionWith.txt  ActorInPatterns.txt  ActorSelf.txt  AlmostAll.txt  AmbiguousValue.txt  AnonymousAbiding.txt  AnyScopeError.txt  AnyThings.txt  AssemblesQualifiedNoun.txt  AssertAdjectives.txt  Astronauts.txt  AwkwardParseNames.txt  BIP-Activities-G.txt  BIP-Apply.txt  BIP-ArithmeticOperations-G.txt  BIP-ArithmeticOperations.txt  BIP-Decide.txt  BIP-DefaultValues-C.txt  BIP-EquivalentLPs-C.txt  BIP-Exponentials-C.txt  BIP-If-G.txt  BIP-Increase-G.txt  BIP-Let-G.txt  BIP-Lists.txt  BIP-Map.txt  BIP-Randomness.txt  BIP-RegExp-C.txt  BIP-RegExp2.txt  BIP-Relations.txt  BIP-Rules-G.txt  BIP-Say-G.txt  BIP-SayIf.txt  BIP-SayParagraphing-C.txt  BIP-SaySpecial-G.txt  BIP-Tables.txt  BIP-TextCasing-C.txt  (+1218 more)
test/Cases/: Chapter12.txt
test/Expected/: Abacus-C-expanded.txt  Abacus-C.txt  Abacus-G.txt  Acidity-C-expanded.txt  Acidity-C.txt  ActionInterrupted.txt  ActionPatternParsing.txt  ActionsCommandTopic-expanded.txt  ActivityListSpecificity-expanded.txt  ActorInPatterns-expanded.txt  ActorInPatterns.txt  ActorSelf.txt  AliasedParaBreak.txt  AlmostAll.txt  AmbiguousValue-expanded.txt  AmbiguousValue.txt  AmbiguouslyPolymorphic-expanded.txt  AnyScopeError-expanded.txt  AnyScoping-expanded.txt  AnyScoping.txt  AnyThings.txt  AssemblesQualifiedNoun.txt  AssemblyPrintedNames.txt  AssertAdjectives-expanded.txt  AssertAdjectives.txt  Astronauts.txt  Asym1to1-expanded.txt  AvoidingSpuriousParagraphBreaks-expanded.txt  BIP-Activities-C-expanded.txt  BIP-Activities-C.txt  BIP-Adjectives-expanded.txt  BIP-Apply-G-expanded.txt  BIP-ArithmeticOperations-G-expanded.txt  BIP-Break-G-expanded.txt  BIP-DefaultValues-C.txt  BIP-EquivalentLPs-G-expanded.txt  BIP-Files-C-expanded.txt  BIP-Hyperbolics-G.txt  BIP-If-G-expanded.txt  BIP-Increase-G.txt  (+409 more)
test/Uninformed/: LexerSpec.hs  SentencifierSpec.hs
test/Uninformed/Parser/: CommonSpec.hs  ExtensionsSpec.hs  HeadingsSpec.hs  NewVerbSpec.hs  StandardRulesSpec.hs  TestHelpers.hs
test/Uninformed/Test/: Bulk.hs  Common.hs
test/Uninformed/Test/Cases/: SceneEndRulePrecedence.txt
test/Uninformed/Test/Syntax/: Sentences.hs  Zipper.hs
test/Uninformed/Test/Syntax/Expected/: Abacus-C.txt  Abacus-G.txt  ActionClauses.txt  ActionInterrupted.txt  ActionPatternParsing.txt  ActionVariableMatching.txt  ActionVariableMatching2.txt  ActionsCommandTopic.txt  ActivityListSpecificity.txt  ActivityOnRegion.txt  ActorExplicitlyPlayer.txt  AliasedParaBreak.txt  AmbiguouslyPolymorphic.txt  AnyScoping.txt  AssemblyPrintedNames.txt  Asym1to1.txt  AvoidingSpuriousParagraphBreaks.txt  BIP-AdaptiveText-C.txt  BIP-Adjectives-G.txt  BIP-ArithmeticOperations-C.txt  BIP-Break-G.txt  BIP-Enumerations-C.txt  BIP-Files-G.txt  BIP-FilesOfTables-C.txt  BIP-Hyperbolics-C.txt  BIP-Increase.txt  BIP-ListLength.txt  BIP-ListOperations-C.txt  BIP-Loops-G.txt  BIP-Now-G.txt  BIP-RealAdjectives-G.txt  BIP-RegExp.txt  BIP-RegExp3.txt  BIP-RelationAdjectives-C.txt  BIP-Say.txt  BIP-SayFonts-C.txt  BIP-SayLists.txt  BIP-SayName.txt  BIP-SayOneOf-C.txt  BIP-SayRealNumbers-G.txt  (+251 more)
test/Uninformed/Test/Words/: Lexer.hs
(+208 files in other folders)
