cabal-version:   3.0
name:            uninformed
version:         0.0.0.1
synopsis:        Yet another interactive fiction library.
description:     Yet another interactive fiction library.
homepage:        https://github.com/PPKFS/uninformed
bug-reports:     https://github.com/PPKFS/uninformed/issues
license:         MIT
author:          Avery
maintainer:      Avery <thecommunistduck@hotmail.co.uk>
copyright:       2022-2023 Avery
category:        Game Development
build-type:      Simple
tested-with: GHC == 9.2.5

source-repository head
  type:     git
  location: https://github.com/PPKFS/uninformed.git

common common-options
  build-depends:
      base
    , aeson
    , containers
    , diagnose
    , hashable
    , megaparsec
    , mtl
    , nonempty-vector
    , optics
    , solitude
    , text
    , unordered-containers
    , vector

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -fhide-source-paths -Wno-unused-top-binds
    -Wmissing-deriving-strategies -O2 -flate-specialise
    -fspecialise-aggressively -fprint-potential-instances
    -fno-warn-unused-do-bind -haddock -fwrite-ide-info
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DuplicateRecordFields
    DerivingStrategies
    LambdaCase
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    Strict
    TypeFamilies
library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Uninformed.Prelude

    Uninformed.Supervisor

    Uninformed.Pipeline
    Uninformed.SourceFile
    Uninformed.Word
    Uninformed.Lexer.Lexer
    Uninformed.Lexer.Combinators
    Uninformed.Vocabulary

    Uninformed.Sentence
    Uninformed.Syntax.SyntaxTree
    Uninformed.Sentences.Breaker
    Uninformed.Sentences.Arrange
    Uninformed.Assertions.BootVerbs
  ghc-options: -Wunused-packages

test-suite uninformed-test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      Uninformed.Test.Words.Lexer
                      Uninformed.Test.Syntax.Zipper
                      Uninformed.Test.Syntax.Sentences
                      Uninformed.Test.Bulk
  build-depends:
    , tasty
    , tasty-hunit
    , tasty-golden
    , exceptions
    , uninformed
    , filepath
    , pretty
    , split
    , bytestring
    , directory
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    QuasiQuotes
    TemplateHaskell

  other-modules: